--- a/index.html
+++ b/index.html
@@ -1,10 +1,44 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Omijeh David Odianonsen | Software Developer</title>
+    <meta
+      name="description"
+      content="Portfolio of Omijeh David Odianonsen - A passionate software developer showcasing projects and professional experience in web development."
+    />
+    <meta
+      name="keywords"
+      content="Omijeh David Odianonsen, Tech Monarch, Omijeh, David, Odianonsen, Omijeh David, Software Developer, Web Developer, React Developer, Portfolio, JavaScript, Frontend Development, Fullstack Development, AI developer, App developer, Embedded systems"
+    />
+    <meta name="author" content="Omijeh David Odianonsen" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://omijeh-david.vercel.app" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Omijeh David Odianonsen | Software Developer"
+    />
+    <meta
+      property="og:description"
+      content="Portfolio of Omijeh David Odianonsen - A passionate software developer showcasing projects and professional experience in web development."
+    />
+    <meta property="og:url" content="https://omijeh-david.vercel.app" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Omijeh David Odianonsen | Software Developer"
+    />
+    <meta
+      name="twitter:description"
+      content="Portfolio of Omijeh David Odianonsen - A passionate software developer showcasing projects and professional experience in web development."
+    />
   </head>
   <body>
     <div id="root"></div>
