--- a/index.html
+++ b/index.html
@@ -39,6 +39,41 @@
       name="twitter:description"
       content="Portfolio of Omijeh David Odianonsen - A passionate software developer showcasing projects and professional experience in web development."
     />
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Omijeh David Odianonsen",
+        "alternateName": "Tech Monarch",
+        "description": "A passionate software developer focused on AI systems, Nigerian language chatbots, immersive 3D websites, and automated trading solutions",
+        "url": "https://omijeh-david.vercel.app",
+        "sameAs": [],
+        "jobTitle": "Software Developer",
+        "knowsAbout": [
+          "AI Engineering",
+          "Machine Learning",
+          "Frontend Development",
+          "Full-Stack Development",
+          "3D Web Integration",
+          "JavaScript",
+          "Python",
+          "React.js"
+        ],
+        "image": "https://omijeh-david.vercel.app/about/award.jpg"
+      }
+    </script>
+
+    <!-- Theme Color for browsers -->
+    <meta name="theme-color" content="#000000" />
+
+    <!-- Additional SEO Meta Tags -->
+    <meta name="application-name" content="Tech Monarch Portfolio" />
+    <meta name="apple-mobile-web-app-title" content="Tech Monarch Portfolio" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
   </head>
   <body>
     <div id="root"></div>
